--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/Markus/Downloads/JDA-3.7.1_385-withDependencies.jar"/>
+	<classpathentry kind="lib" path="Z:/Sonstiges/JDA-3.6.0_376-withDependencies.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
